# dyadikos-cpp

./: .clang-format  .clang-tidy  .clangd  .gitignore  README.md  compile.sh  meson.build
examples/shader/: default.frag  default.vert
include/: app.hpp  camera.hpp  mesh.hpp  primitive.hpp  shader.hpp  transform.hpp
include/glad/: glad.h
models/: monkey.glb  warehouse.gltf
models/textures/: CeilingMetal_baseColor.jpeg.import  CeilingMetal_metallicRoughness.png.import  CeilingMetal_normal.jpeg.import  ConcreteFloor_baseColor.jpeg.import  ConcreteFloor_metallicRoughness.png.import  ConcreteFloor_normal.png.import  CorrugatedMetal_baseColor.jpeg.import  CorrugatedMetal_metallicRoughness.png.import  CorrugatedMetal_normal.png.import  Exit_baseColor.jpeg.import  Metal24-basecolor_baseColor.jpeg.import  Metal24-basecolor_metallicRoughness.png.import  Metal24-basecolor_normal.png.import  Metal25-basecolor_baseColor.jpeg.import  Metal25-basecolor_metallicRoughness.png.import  Metal25-basecolor_normal.png.import  Metal_baseColor.jpeg.import  Metal_metallicRoughness.png.import  Metal_normal.png.import  material_9_baseColor.jpeg.import  material_9_metallicRoughness.png.import
shaders/: compile.sh  shader.vert
src/: App.hpp  app.hpp  camera.hpp  glad.cpp  main.cpp  model.hpp  transform.hpp
